--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,92 +2,7 @@
   <div class="container-fluid">
     <div class="header-body">
       <!-- Card stats -->
-      <div class="row">
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Receitas</h5>
-                  <span class="h2 font-weight-bold mb-0">3.000</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fas fa-chart-bar"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                <span class="text-nowrap">Desde o último mês</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Despesas</h5>
-                  <span class="h2 font-weight-bold mb-0">2.356</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                <span class="text-nowrap">Desde o último mês</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Gastos imprevistos</h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                    <i class="fas fa-users"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                <span class="text-nowrap">Desde o último mês</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Saldo Futuro</h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Desde o último mês</span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-info-cards></app-info-cards>
     </div>
   </div>
 </div>
@@ -103,14 +18,18 @@
             </div>
             <div class="col">
               <ul class="nav nav-pills justify-content-end">
-                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"  (click)="data=datasets[0];updateOptions()">
-                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked===true}" data-toggle="tab" (click)="clicked=true;clicked1=false">
+                <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales"
+                  (click)="data=datasets[0];updateOptions()">
+                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked===true}"
+                    data-toggle="tab" (click)="clicked=true;clicked1=false">
                     <span class="d-none d-md-block">Mensal</span>
                     <span class="d-md-none">M</span>
                   </a>
                 </li>
-                <li class="nav-item" data-toggle="chart" data-target="#chart-sales"  (click)="data=datasets[1];updateOptions()">
-                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked1===true}" data-toggle="tab" (click)="clicked=false;clicked1=true">
+                <li class="nav-item" data-toggle="chart" data-target="#chart-sales"
+                  (click)="data=datasets[1];updateOptions()">
+                  <a href="javascript:void(0)" class="nav-link py-2 px-3" [ngClass]="{'active':clicked1===true}"
+                    data-toggle="tab" (click)="clicked=false;clicked1=true">
                     <span class="d-none d-md-block">Semanal</span>
                     <span class="d-md-none">S</span>
                   </a>
@@ -149,103 +68,7 @@
   </div>
   <div class="row mt-5">
     <div class="col-xl-8 mb-5 mb-xl-0">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <div class="row align-items-center">
-            <div class="col">
-              <h3 class="mb-0">Movimentações</h3>
-            </div>
-            <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Atualizar</a>
-            </div>
-          </div>
-        </div>
-        <div class="table-responsive">
-          <!-- Projects table -->
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">Categoria</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Valor</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">
-                  Salário Empresa
-                </th>
-                <td>
-                  Salário
-                </td>
-                <td>
-                  Receita
-                </td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> R$2.900,00
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Aluguel Apartamento
-                </th>
-                <td>
-                  Moradia
-                </td>
-                <td>
-                  Despesa
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> R$1.200,00
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Supermercado
-                </th>
-                <td>
-                  Alimentação
-                </td>
-                <td>
-                  Despesa
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> R$600,00
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Hora extra na empresa
-                </th>
-                <td>
-                  Salário
-                </td>
-                <td>
-                  Receita
-                </td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> R$100,00
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">
-                  Cinema
-                </th>
-                <td>
-                  Lazer
-                </td>
-                <td>
-                  Despesa
-                </td>
-                <td>
-                  <i class="fas fa-arrow-down text-danger mr-3"></i> R$60,00
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
+      <app-movement-table></app-movement-table>
     </div>
     <div class="col-xl-4">
       <div class="card shadow">
@@ -282,7 +105,8 @@
                     <span class="mr-2">60%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                        <div class="progress-bar bg-gradient-danger" role="progressbar" aria-valuenow="60"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
                       </div>
                     </div>
                   </div>
@@ -300,7 +124,8 @@
                     <span class="mr-2">10%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-success" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;"></div>
+                        <div class="progress-bar bg-gradient-success" role="progressbar" aria-valuenow="10"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 10%;"></div>
                       </div>
                     </div>
                   </div>
@@ -318,7 +143,8 @@
                     <span class="mr-2">30%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-primary" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
+                        <div class="progress-bar bg-gradient-primary" role="progressbar" aria-valuenow="30"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></div>
                       </div>
                     </div>
                   </div>
@@ -336,7 +162,8 @@
                     <span class="mr-2">35%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%;"></div>
+                        <div class="progress-bar bg-gradient-info" role="progressbar" aria-valuenow="35"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 35%;"></div>
                       </div>
                     </div>
                   </div>
@@ -344,7 +171,7 @@
               </tr>
               <tr>
                 <th scope="row">
-                    Ônibus
+                  Ônibus
                 </th>
                 <td>
                   Despesa
@@ -354,7 +181,8 @@
                     <span class="mr-2">10%</span>
                     <div>
                       <div class="progress">
-                        <div class="progress-bar bg-gradient-warning" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%;"></div>
+                        <div class="progress-bar bg-gradient-warning" role="progressbar" aria-valuenow="10"
+                          aria-valuemin="0" aria-valuemax="100" style="width: 10%;"></div>
                       </div>
                     </div>
                   </div>
